[package]
authors = ["nathanielsimard <nathaniel.simard.42@gmail.com>"]
categories = ["science"]
description = "WGPU backend for the Burn framework"
edition = "2021"
keywords = ["deep-learning", "machine-learning", "gpu", "wgpu", "webgpu"]
license = "MIT OR Apache-2.0"
name = "burn-wgpu"
readme = "README.md"
repository = "https://github.com/tracel-ai/burn/tree/main/burn-wgpu"
version = "0.12.0"

[features]
default = ["autotune", "std"]
std = []
autotune = []
fusion = ["burn-fusion"]

[dependencies]
burn-common = { path = "../burn-common", version = "0.12.0" }
burn-tensor = { path = "../burn-tensor", version = "0.12.0" }
burn-fusion = { path = "../burn-fusion", version = "0.12.0", optional = true }

bytemuck = { workspace = true }
derive-new = { workspace = true }
log = { workspace = true }
num-traits = { workspace = true }
rand = { workspace = true }
spin = { workspace = true }

# WGPU stuff
futures-intrusive = { workspace = true }
pollster = { workspace = true }
wgpu = { workspace = true, features = ["fragile-send-sync-non-atomic-wasm"] }

# Template
serde = { workspace = true }
text_placeholder = { version = "0.5.0", features = ["struct_context"] }

hashbrown = { workspace = true }
burn-compute = { path = "../burn-compute", version = "0.12.0", default-features = false, features = [
  "channel-mutex",
  "std",
] }


[dev-dependencies]
burn-autodiff = { path = "../burn-autodiff", version = "0.12.0", default-features = false, features = [
  "export_tests",
] }
burn-tensor = { path = "../burn-tensor", version = "0.12.0", default-features = false, features = [
  "export_tests",
] }
burn-ndarray = { path = "../burn-ndarray", version = "0.12.0" }
burn-fusion = { path = "../burn-fusion", version = "0.12.0" }
serial_test = "2.0.0"

[[bench]]
name = "matmul"
harness = false

[[bench]]
name = "fused_elemwise"
harness = false

[[bench]]
name = "reduction"
harness = false
