[package]
authors = ["nathanielsimard <nathaniel.simard.42@gmail.com>"]
categories = ["science", "no-std", "embedded", "wasm"]
description = "Flexible and Comprehensive Deep Learning Framework in Rust"
edition = "2021"
keywords = ["deep-learning", "machine-learning", "tensor", "pytorch", "ndarray"]
license = "MIT OR Apache-2.0"
name = "burn"
readme = "README.md"
repository = "https://github.com/burn-rs/burn"
version = "0.9.0"

[features]
default = ["std", "train"]
experimental-named-tensor = ["burn-core/experimental-named-tensor"]
std = [
  "burn-core/std",
]
train = ["std", "burn-train"] # Training requires std

[dependencies]

# ** Please make sure all dependencies support no_std when std is disabled **

burn-core = {path = "../burn-core", version = "0.9.0", default-features = false}
burn-train = {path = "../burn-train", version = "0.9.0", optional = true}
