[package]
authors = ["nathanielsimard <nathaniel.simard.42@gmail.com>"]
categories = ["science", "no-std", "embedded", "wasm"]
description = "Flexible and Comprehensive Deep Learning Framework in Rust"
edition = "2021"
keywords = ["deep-learning", "machine-learning", "tensor", "pytorch", "ndarray"]
license = "MIT OR Apache-2.0"
name = "burn"
readme = "README.md"
repository = "https://github.com/burn-rs/burn"
version = "0.9.0"

[features]
default = [
  "std",
  "train-ui",
  "train-metrics"
]
experimental-named-tensor = ["burn-core/experimental-named-tensor"]
std = [
  "burn-core/std",
]

# Training requires std
train = ["std", "burn-train"]
# Includes the Text UI (progress bars, metric plots)
train-ui = ["train", "burn-train/ui"]
# Includes system info metrics (CPU/GPU usage, etc)
train-metrics = ["train", "burn-train/metrics"]

dataset = ["burn-core/dataset"]
dataset-sqlite = ["burn-core/dataset-sqlite"]
dataset-sqlite-bundled = ["burn-core/dataset-sqlite-bundled"]

autodiff = ["burn-core/autodiff"]

ndarray = ["burn-core/ndarray"]
ndarray-std = ["burn-core/ndarray-std"]
ndarray-blas-accelerate = ["burn-core/ndarray-blas-accelerate"]
ndarray-blas-netlib = ["burn-core/ndarray-blas-netlib"]
ndarray-blas-openblas = ["burn-core/ndarray-blas-openblas"]
ndarray-blas-openblas-system = ["burn-core/ndarray-blas-openblas-system"]

wgpu = ["burn-core/wgpu"]
wgpu-autotune = ["burn-core/wgpu-autotune"]

tch = ["burn-core/tch"]

candle = ["burn-core/candle"]

[dependencies]

# ** Please make sure all dependencies support no_std when std is disabled **

burn-core = {path = "../burn-core", version = "0.9.0", default-features = false}
burn-train = {path = "../burn-train", version = "0.9.0", optional = true, default-features = false }
