[package]
authors = ["nathanielsimard <nathaniel.simard.42@gmail.com>"]
categories = ["science", "no-std", "embedded", "wasm"]
description = "Flexible and Comprehensive Deep Learning Framework in Rust"
edition = "2021"
keywords = ["deep-learning", "machine-learning", "tensor", "pytorch", "ndarray"]
license = "MIT OR Apache-2.0"
name = "burn"
readme = "README.md"
repository = "https://github.com/burn-rs/burn"
version = "0.10.0"
rust-version = "1.71"

[features]
default = ["burn-core/default"]
std = ["burn-core/std"]

# Training with full features
train = ["burn-train/default", "autodiff", "dataset"]

## Include nothing
train-minimal = ["burn-train"]

## Includes the Text UI (progress bars, metric plots)
train-tui = ["burn-train/tui"]

##  Includes system info metrics (CPU/GPU usage, etc)
train-metrics = ["burn-train/metrics"]

# Datasets
dataset = ["burn-core/dataset"]
dataset-minimal = ["burn-core/dataset-minimal"]
dataset-sqlite = ["burn-core/dataset-sqlite"]
dataset-sqlite-bundled = ["burn-core/dataset-sqlite-bundled"]

# Backends
autodiff = ["burn-core/autodiff"]

ndarray = ["burn-core/ndarray"]
ndarray-no-std = ["burn-core/ndarray-no-std"]
ndarray-blas-accelerate = ["burn-core/ndarray-blas-accelerate"]
ndarray-blas-netlib = ["burn-core/ndarray-blas-netlib"]
ndarray-blas-openblas = ["burn-core/ndarray-blas-openblas"]
ndarray-blas-openblas-system = ["burn-core/ndarray-blas-openblas-system"]

wgpu = ["burn-core/wgpu"]
tch = ["burn-core/tch"]
candle = ["burn-core/candle"]

# Experimental
experimental-named-tensor = ["burn-core/experimental-named-tensor"]

[dependencies]

# ** Please make sure all dependencies support no_std when std is disabled **

burn-core = { path = "../burn-core", version = "0.10.0", default-features = false }
burn-train = { path = "../burn-train", version = "0.10.0", optional = true, default-features = false }

[package.metadata.docs.rs]
all-features = true
