[package]
name = "xtask"
version = "2.2.0"
edition.workspace = true
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints]
workspace = true

[dependencies]
log = { workspace = true }
strum = { workspace = true }
tracel-xtask = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
