[package]
name = "xtask"
version = "2.3.0"
edition.workspace = true
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints]
workspace = true

[dependencies]
log = { workspace = true }
strum = { workspace = true }
tracel-xtask = { workspace = true }
"gaba-burn-vector" = { path = "../crates/gaba-burn-vector" }
rand = "0.9.2"
anyhow = "1.0"
serde_json = "1.0"
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
rstest = { workspace = true }
tempfile = "3"
