[package]
name = "xtask"
version = "4.10.0"
edition.workspace = true
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints]
workspace = true

[dependencies]
log = { workspace = true }
strum = { workspace = true }

tracel-xtask = "=4.15.1"
# ### For local development. ###
# tracel-xtask = { path = "../xtask/crates/tracel-xtask", default-features = false }

[dev-dependencies]
rstest = { workspace = true }
