[package]
name = "pytorch-tests"
version.workspace = true
edition.workspace = true
license.workspace = true

[dev-dependencies]
burn = { path = "../../burn" }
burn-ndarray = { path = "../../burn-ndarray" }
serde = { workspace = true }
float-cmp = { workspace = true }
burn-import = { path = "../", features = ["pytorch"] }
cfg-if = "1.0.0"


[build-dependencies]
burn-import = { path = "../", features = ["pytorch"] }
