[package]
authors = ["nathanielsimard <nathaniel.simard.42@gmail.com>"]
categories = ["science", "no-std", "embedded", "wasm"]
description = "Tensor tests for Burn backends"
documentation = "https://docs.rs/burn-backend-tests"
edition.workspace = true
keywords = ["deep-learning", "machine-learning", "tensor", "pytorch", "ndarray"]
license.workspace = true
name = "burn-backend-tests"
readme.workspace = true
repository = "https://github.com/tracel-ai/burn/tree/main/crates/burn-backend-tests"
version.workspace = true

[lints]
workspace = true

[features]
default = [
    "burn-tensor/default",
    # Default
    # "ndarray",
    "std",
]
std = ["burn-tensor/std"]

# Backends
cuda = ["burn-tensor/cuda", "quantization", "cube"]
rocm = ["burn-tensor/rocm", "quantization", "cube"]
ndarray = ["burn-tensor/ndarray", "quantization"]
tch = ["burn-tensor/tch"]
vulkan = ["wgpu", "burn-tensor/vulkan"]
webgpu = ["wgpu", "burn-tensor/webgpu"]
metal = ["wgpu", "burn-tensor/metal"]
wgpu = ["burn-tensor/wgpu", "quantization", "cube"]
cpu = ["burn-tensor/cpu", "cube"]

autotune = ["burn-tensor/autotune"]
autotune-checks = ["burn-tensor/autotune-checks"]
fusion = ["burn-tensor/fusion"]

# CubeCL backends
cube = [
    "cubek",
    "autotune",
    "burn-tensor/ndarray",
    "burn-ndarray",
    # Not used directly, but included to avoid recompiling with and without fusion
    "burn-cubecl",
]

# Test configs
quantization = []

[dependencies]
burn-tensor = { path = "../burn-tensor", version = "=0.21.0-pre.2", default-features = false, features = [
    "autodiff",
] }
burn-tensor-testgen = { path = "../burn-tensor-testgen", version = "=0.21.0-pre.2" }

# For random tests
cubek = { workspace = true, features = ["random"], optional = true }

# Explicitly enable test-only checks
burn-autodiff = { path = "../burn-autodiff", version = "=0.21.0-pre.2", default-features = false, features = [
    "export_tests",
] }
burn-ndarray = { path = "../burn-ndarray", version = "=0.21.0-pre.2", optional = true, default-features = false, features = [
    "export_tests",
] }

# Manually enable so running the tests again with fusion feature doesn't have to compile other crates
burn-cubecl = { path = "../burn-cubecl", version = "=0.21.0-pre.2", optional = true, features = [
    "fusion",
] }

num-traits = { workspace = true }
serial_test = { workspace = true }


[dev-dependencies]
# Used to initialize device settings (test dtypes)
ctor = "0.8.0"
