[package]
authors = ["louisfd <louisfd94@gmail.com>"]
categories = ["science"]
description = "[Deprecated] Candle backend for the Burn framework - use burn-cubecl, burn-ndarray, or burn-tch instead"
edition.workspace = true
keywords = ["deep-learning", "machine-learning", "data"]
license.workspace = true
name = "burn-candle"
readme.workspace = true
repository = "https://github.com/tracel-ai/burn/tree/main/crates/burn-candle"
documentation = "https://docs.rs/burn-candle"
version.workspace = true

[lints]
workspace = true

[features]
default = ["std"]
std = []
doc = ["default"]
tracing = [
    "burn-backend/tracing",
    "burn-std/tracing",
]

cuda = ["candle-core/cuda"]
metal = ["candle-core/metal"]
accelerate = ["candle-core/accelerate"]

[dependencies]
burn-backend = { workspace = true }
# For rand utils and stub mutex
burn-std = { workspace = true }

candle-core = { workspace = true }
derive-new = { workspace = true }

[dev-dependencies]
burn-tch = { workspace = true }

[package.metadata.docs.rs]
features = ["doc"]
rustdoc-args = ["--cfg", "docsrs"]
